docs: fix nextjs panda.config example

--- a/website/content/docs/installation/nextjs.mdx
+++ b/website/content/docs/installation/nextjs.mdx
@@ -166,15 +166,18 @@ file.
 import { defineConfig } from "@pandacss/dev"
 
 export default defineConfig({
-// Whether to use css reset
-preflight: true,
+  // Whether to use css reset
+  preflight: true,
 
-// Where to look for your css declarations include: ["./src/components/**/*.{ts,tsx,js,jsx}",
-"./src/app/**/*.{ts,tsx,js,jsx}"],
+  // Where to look for your css declarations
+  include: ["./src/components/**/*.{ts,tsx,js,jsx}", "./src/app/**/*.{ts,tsx,js,jsx}"],
 
-// Files to exclude exclude: [],
+  // Files to exclude
+  exclude: [],
 
-// The output directory for your css system outdir: "styled-system", })
+  // The output directory for your css system
+  outdir: "styled-system",
+})
 
 ````
 {/* <!-- prettier-ignore-end --> */}
