docs: refine content

--- a/website/content/docs/installation/gatsby.mdx
+++ b/website/content/docs/installation/gatsby.mdx
@@ -138,7 +138,7 @@ npm run develop
 Now you can start using Panda CSS in your project. Here is the snippet of code that you can use in your
 `src/pages/index.tsx` file.
 
-```tsx {3, 7} filename="src/pages/index.tsx"
+```tsx {3,7} filename="src/pages/index.tsx"
 import * as React from 'react'
 import type { HeadFC, PageProps } from 'gatsby'
 import { css } from '../../styled-system/css'
