--- a/website/content/docs/references/config.mdx
+++ b/website/content/docs/references/config.mdx
@@ -52,7 +52,7 @@ Whether to opt-out of the defaults config presets: [`@pandacss/preset-base`, `@p
 
 **Default**: `false`
 
-Whether to enable css reset styles.
+Whether to enable css reset styles. See also [Global styles](/docs/concepts/global-styles) for how reset interacts with global variables and layering.
 
 Enable preflight:
 
