--- a/website/content/docs/concepts/writing-styles.mdx
+++ b/website/content/docs/concepts/writing-styles.mdx
@@ -297,6 +297,8 @@ Global styles are useful for applying additional global resets or font faces. Us
 
 Global styles are inserted at the top of the stylesheet and are scoped to the `@layer base` cascade layer.
 
+> For resets, global variables, theming patterns, and more examples, see [Global styles](/docs/concepts/global-styles).
+
 ```js filename="panda.config.ts"
 import { defineConfig, defineGlobalStyles } from '@pandacss/dev'
 
@@ -323,58 +325,6 @@ The styles generated at build time will look like this:
     line-height: 1.5;
   }
 }
-```
-
-### Setting global font
-
-Set the `--global-font-body` and `--global-font-mono` CSS variables to set the body and monospace font-families.
-
-```ts filename="panda.config.ts"
-import { defineConfig } from '@pandacss/dev'
-
-export default defineConfig({
-  // ...
-  globalCss: {
-    html: {
-      '--global-font-body': 'Inter, sans-serif',
-      '--global-font-mono': 'Mononoki Nerd Font, monospace'
-    }
-  }
-})
-```
-
-### Setting the global placeholder color
-
-Set the `--global-color-placeholder` CSS variable to set the placeholder color for all input elements.
-
-```ts filename="panda.config.ts"
-import { defineConfig } from '@pandacss/dev'
-
-export default defineConfig({
-  // ...
-  globalCss: {
-    html: {
-      '--global-color-placeholder': 'red'
-    }
-  }
-})
-```
-
-### Setting the global border color
-
-Set the `--global-color-border` CSS variable to set the border color for all elements.
-
-```ts filename="panda.config.ts"
-import { defineConfig } from '@pandacss/dev'
-
-export default defineConfig({
-  // ...
-  globalCss: {
-    html: {
-      '--global-color-border': 'colors.gray.400'
-    }
-  }
-})
 ```
 
 ## Style Composition
