--- a/website/content/docs/installation/angular.mdx
+++ b/website/content/docs/installation/angular.mdx
@@ -101,7 +101,7 @@ Open your `package.json` file and update the `scripts` section as follows:
 Make sure that all of the paths of your Angular components are included in the `include` section of the
 `panda.config.ts` file.
 
-```js {8, 17} filename="panda.config.ts"
+```js {8,17} filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
 
 export default defineConfig({
