--- a/website/content/docs/installation/solidjs.mdx
+++ b/website/content/docs/installation/solidjs.mdx
@@ -106,7 +106,7 @@ Open your `package.json` file and update the `scripts` section as follows:
 Make sure that all of the paths of your SolidJS components are included in the `include` section of the
 `panda.config.ts` file.
 
-```js {8, 17} filename="panda.config.ts"
+```ts {8,17} filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
 
 export default defineConfig({
