--- a/website/content/docs/installation/storybook.mdx
+++ b/website/content/docs/installation/storybook.mdx
@@ -77,7 +77,7 @@ Install panda and create your `panda.config.ts` file.
 If you are using Storybook with the Vite builder, you will have to update your PostCSS config file to use the array
 syntax for the plugins instead of the object syntax. Simply change `postcss.config.[c]js`:
 
-```diff {3} filename="postcss.config.js"
+```diff filename="postcss.config.js"
 module.exports = {
 -  plugins: {
 -   '@pandacss/dev/postcss': {}
@@ -109,8 +109,9 @@ Open your `package.json` file and update the `scripts` section as follows:
 Make sure that all of the paths of your Storybook components are included in the `include` section of the
 `panda.config.ts` file.
 
-```js {9} filename="panda.config.ts"
+```ts {7} filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
+
 export default defineConfig({
   // Whether to use css reset
   preflight: true,
