docs: global styles

--- a/website/content/docs/concepts/global-styles.mdx
+++ b/website/content/docs/concepts/global-styles.mdx
@@ -43,6 +43,7 @@ These variables are used by the reset and defaults. Set them in `globalCss`:
 - `--global-color-border`
 - `--global-color-placeholder`
 - `--global-color-selection`
+- `--global-color-focus-ring`
 
 ## Setting global styles (base)
 
@@ -59,7 +60,8 @@ export default defineConfig({
       '--global-font-mono': 'Mononoki Nerd Font, monospace',
       '--global-color-border': 'colors.gray.400',
       '--global-color-placeholder': 'rgba(0,0,0,0.5)',
-      '--global-color-selection': 'rgba(0,115,255,0.3)'
+      '--global-color-selection': 'rgba(0,115,255,0.3)',
+      '--global-color-focus-ring': 'colors.blue.400'
     }
   }
 })
