docs: adds `jsxFramework` requirement for template literals

--- a/website/content/docs/concepts/template-literals.mdx
+++ b/website/content/docs/concepts/template-literals.mdx
@@ -20,7 +20,7 @@ To use template literals, you need to set the `syntax` option in your `panda.con
 export default defineConfig({
   // ...
   syntax: 'template-literal', // required
-  jsxFramework: 'react' // optional
+  jsxFramework: 'react' // required for JSX utilities, e.g. `styled`
 })
 ```
 
