--- a/website/content/docs/theming/studio.mdx
+++ b/website/content/docs/theming/studio.mdx
@@ -8,7 +8,7 @@ description: Document your design system visually using Panda Studio.
 Panda Studio is a visual interface for exploring and understanding your entire design system. It provides a read-only
 view of your tokens, semantic tokens, recipes, patterns, conditions, and more.
 
-<img src="/panda-studio.png" alt="Panda Studio UI" />
+![Panda Studio UI](/panda-studio.png)
 
 If you don't want to manually generate spec files or build a documentation website, Panda Studio is the easiest option.
 
